--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Edit.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Edit.cshtml
@@ -3,8 +3,8 @@
 
 @{
     Layout = Constants.AdminLayoutName;
-    ViewData["PageTitle"] = "Page Creation";
-    ViewData["PageSubtitle"] = "Create a new page";
+    ViewData["PageTitle"] = "Page Edit";
+    ViewData["PageSubtitle"] = "Edit page";
 }
 
 
@@ -19,12 +19,13 @@
             </div>
             <div class="panel-body">
                 <div class="row">
-                    <form id="pageCreateForm" class="form-horizontal" asp-controller="CmsPage" asp-action="Create" method="post">
+                    <form id="pageEditForm" class="form-horizontal" asp-controller="CmsPage" asp-action="Edit" method="post">
 
                         <div class="col-sm-8 pull-left">
                             @*<h3>@ViewData["PageTitle"]</h3>*@
                             <div class="col-md-12">
                                 <span asp-validation-summary="ValidationSummary.All" class="text-danger"></span>
+                                <input type="hidden" id="Id" name="Id" value="@Model.Id" />
                                 <div class="form-group input-group">
                                     <span class="input-group-addon">Page Title: </span>
                                     <input type="text" class="form-control" id="Title" name="Title" asp-for="Title" placeholder="Enter Page Title">
@@ -54,7 +55,7 @@
 
                             <div>
                                 <label>Page Content</label>
-                                <textarea id="PageContent" name="PageContent" class="form-control" data-val="false"></textarea>
+                                <textarea id="PageContent" name="PageContent" class="form-control" data-val="false">@System.Text.Encoding.UTF8.GetString(Model.Content)</textarea>
                                 <span asp-validation-for="Content" class="text-danger"></span>
                             </div>
 
@@ -76,7 +77,7 @@
                                         <div class="panel-title">
                                             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                                 <i class="more-less glyphicon glyphicon-chevron-down" ></i>
-                                                Publish
+                                                Update
                                             </a>
                                         </div>
                                     </div>
@@ -85,23 +86,64 @@
                                             <div>
                                                 <label>Status</label>
                                                 <select class="form-control" asp-for="PageStatus">
-                                                    <option value="Draft">Draft</option>
-                                                    <option value="Review">Review</option>
-                                                    <option value="Published" selected>Published</option>
-                                                    <option value="Unpublished">Unpublished</option>
-                                                    <option value="Archived">Archived</option>
+                                                    @if((int)Model.PageStatus == 0){
+                                                        <option value="Draft" selected>Draft</option>
+                                                    }
+                                                    else{
+                                                        <option value="Draft">Draft</option>
+                                                    }
+                                                    @if((int)Model.PageStatus == 1){
+                                                        <option value="Review" selected>Review</option>
+                                                    }
+                                                    else{
+                                                        <option value="Review">Review</option>
+                                                    }
+                                                    @if((int)Model.PageStatus == 2){
+                                                        <option value="Published" selected>Published</option>
+                                                    }
+                                                    else{
+                                                        <option value="Published">Published</option>
+                                                    }
+                                                    @if((int)Model.PageStatus == 3){
+                                                        <option value="Unpublished" selected>Unpublished</option>
+                                                    }
+                                                    else{
+                                                        <option value="Unpublished">Unpublished</option>
+                                                    }
+                                                    @if((int)Model.PageStatus == 4){
+                                                        <option value="Archived" selected>Archived</option>
+                                                    }
+                                                    else{
+                                                        <option value="Archived">Archived</option>
+                                                    }
                                                 </select>
                                             </div>
                                             <div>
                                                 <label>Visibility</label>
                                                 <select class="form-control" asp-for="PageType">
-                                                    <option value="Public">Public</option>
-                                                    <option value="Private">Private</option>
+                                                    @if((int)Model.PageType == 0){
+                                                        <option value="Public" selected>Public</option>
+                                                    }
+                                                    else{
+                                                        <option value="Public">Public</option>
+                                                    }
+                                                    @if((int)Model.PageType == 1){
+                                                        <option value="Private" selected>Private</option>
+                                                    }
+                                                    else{
+                                                        <option value="Private">Private</option>
+                                                    }
+                                                    @if((int)Model.PageType == 2){
+                                                        <option value="PasswordProtected" selected>PasswordProtected</option>
+                                                    }
+                                                    else{
+                                                        <option value="PasswordProtected">PasswordProtected</option>
+                                                    }
                                                 </select>
                                             </div>
                                             <div>
                                                 <label>Schedule Date</label>
-                                                <input type="text" class="form-control" asp-for="PublishDate" value="@DateTime.Now" />
+                                                <input type="text" class="form-control" asp-for="PublishDate" value="@Model.PublishDate" />
                                             </div>
                                             <div>
                                                 <label>Add to Navigation Menu</label>
@@ -109,11 +151,11 @@
                                             </div>
                                         </div>
                                         <div class="panel-footer">
-                                            <div class="pull-left">
+                                            @*<div class="pull-left">
                                                 <button id="saveDraft" class="btn btn-sm btn-default" type="button">Save Draft</button>
-                                            </div>
+                                            </div>*@
                                             <div class="pull-right">
-                                                <button id="publish" class="btn btn-sm btn-primary" type="button">Publish</button>
+                                                <button id="update" class="btn btn-sm btn-primary" type="button">Update</button>
                                             </div>
                                             <div style="clear:both;"></div>
                                         </div>
