--- a/NetCoreCMS.Web/Views/Shared/_AdminLoginPartial.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLoginPartial.cshtml
@@ -11,13 +11,25 @@
         {
             <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a asp-area="" asp-controller="CmsHome" asp-action="Index" target="_blank">Website</a></li>
-                    <li><a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a></li>
                     <li>
-                        <a asp-area="" asp-controller="ManageAccount" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                        <a asp-area="" asp-controller="CmsHome" asp-action="Index" target="_blank" title="Fontend">
+                            <i class="fa fa-share fa-fw"></i>
+                        </a>
                     </li>
-                    <li>
-                        <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="true">
+                            <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-user">
+                            <li>
+                                <a asp-area="" asp-controller="ManageAccount" asp-action="Index" title="Manage"><i class="fa fa-user fa-fw"></i> Hello @UserManager.GetUserName(User)!</a>
+                            </li>
+                            @*<li class="divider"></li>*@
+                            <li>
+                                <button type="submit" class="btn btn-link navbar-btn navbar-link" style="padding-left:20px;"><i class="fa fa-sign-out fa-fw"></i> Logout</button>
+                            </li>
+                        </ul>
+                        <!-- /.dropdown-user -->
                     </li>
                 </ul>
             </form>
@@ -26,8 +38,8 @@
         {
             <ul class="nav navbar-nav navbar-right">
                 <li><a asp-area="" asp-controller="CmsHome" asp-action="Index" target="_blank">Website</a></li>
-                <li><a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a></li>
-                <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
+                @*<li><a asp-area="" asp-controller="Admin" asp-action="Index">Admin</a></li>*@
+                @*<li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>*@
                 <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
             </ul>
         }
