--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/wwwroot/css/menu.css
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/wwwroot/css/menu.css
@@ -4,13 +4,13 @@
     border-color: #EEEEEE;
 }
 
-.panel-default > .panel-heading {
+/*.panel-default > .panel-heading {
     padding: 0;
     border-radius: 0;
     color: #212121;
     background-color: #FAFAFA;
     border-color: #EEEEEE;
-}
+}*/
 
 
 .panel-title > a {
