--- a/NetCoreCMS.Web/Themes/DefaultDark/Shared/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/DefaultDark/Shared/_SiteLayout.cshtml
@@ -13,7 +13,7 @@
     <title>@ViewData["Title"] - NetCoreCMS Frontend</title>
         
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="~/Themes/Default/css/site.css" />
+    <link rel="stylesheet" href="~/Themes/DefaultDark/css/site.css" />
     <link href="~/lib/css-loader/dist/css-loader.css" rel="stylesheet" />
         
     @Html.Raw(JavaScriptSnippet.FullScript)
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div id="loadingMask" class="loader loader-double"></div>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
