started work on theme layout

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsTheme/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsTheme/Index.cshtml
@@ -31,7 +31,7 @@
                                 <td>@theme.Description</td>
                                 <td>@theme.Version</td>
                                 <td>@theme.Category</td>
-                                <td><img width="100" height="100" src="/Themes/@theme.ThemeName/@theme.PreviewImage" /></td>
+                                <td><img width="100" height="100" src="/Themes/@theme.ThemeName/Preview/@theme.PreviewImage" /></td>
                                 <td>
                                     @if (theme.IsActive == false)
                                     { 
