implemented theme layout

--- a/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_AdminLayout.cshtml
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 @*<a class="navbar-brand" href="index.html">SB Admin v2.0</a>*@
-                <a asp-area="" asp-controller="Settings" asp-action="Index" class="navbar-brand">NetCoreCMS Settings</a>
+                <a asp-area="" asp-controller="Admin" asp-action="Index" class="navbar-brand">NetCoreCMS Admin</a>
             </div>
             <!-- /.navbar-header -->
             <ul class="nav navbar-top-links navbar-right">              
@@ -99,7 +99,7 @@
                             <a href="#"><i class="fa fa-file-text-o fa-fw"></i> Page<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li><a asp-controller="CmsPage" asp-action="Create"><i class="fa fa-pencil-square-o fa-fw"></i> New Page </a></li>
-                                <li><a asp-controller="CmsPage" asp-action="Index"><i class="fa fa-th-list fa-fw"></i> Manage </a></li>
+                                <li><a asp-controller="CmsPage" asp-action="Manage"><i class="fa fa-th-list fa-fw"></i> Manage </a></li>
                             </ul>
                         </li>
                         <li>
