--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
@@ -1,8 +1,15 @@
 ﻿@using NetCoreCMS.Framework.Utility
 @using System.Collections
-@model List<NccPage>
+@using System.Text
+@using System.Linq
+
+@model NccPage
 @{
-    Layout = Constants.AdminLayoutName;
+
+    if (!string.IsNullOrEmpty(Model.Layout) && GlobalConfig.ActiveTheme.Layouts.Where(x=>x.Name == Model.Layout).FirstOrDefault() != null) {
+        Layout = "_" + Model.Layout;
+    }
+
     ViewData["PageTitle"] = "Page Manage";
     ViewData["PageSubtitle"] = "Manage pages";
 }
@@ -10,47 +17,15 @@
 <script src="~/lib/ckeditor/ckeditor.js"></script>
 <link href="/NetCoreCMS.Modules.Cms/css/page.css" rel="stylesheet" />
 <script src="/NetCoreCMS.Modules.Cms/js/managePage.js"></script>
-
-
+ 
 <div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                @ViewData["PageSubtitle"]
-                <div class="pull-right"><a asp-controller="CmsPage" asp-action="Create" class="btn btn-outline btn-primary btn-xs">Add New</a></div> 
-            </div>
-            <div class="panel-body">
-                <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
-                    <thead>
-                        <tr><th>Title</th><th>Author</th><th>PublishDate</th><th>Status</th><th>Order</th><th>Action</th></tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var page in Model)
-                        {
-                            <tr>
-                                <td>@page.Title</td>
-                                <td>@page.CreateBy</td>
-                                <td>@page.PublishDate</td>
-                                <td>@page.PageStatus</td>
-                                <td>@page.PageOrder</td>
-                                <td>
-                                    <a asp-controller="CmsPage" asp-action="Edit" asp-route-id="@page.Id">Edit</a> |
-                                    <a asp-controller="CmsPage" asp-action="Delete" asp-route-id="@page.Id">Delete</a>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-
-            </div>
-            <!-- /.panel-body -->
-        </div>
-        <!-- /.panel -->
+    <div class="col-lg-12"> 
+        <p>
+            @Html.Raw(Encoding.UTF8.GetString(Model.Content))
+        </p> 
     </div>
 </div>
-
-
-
+ 
 @section Scripts{
     <link href="~/lib/DataTables/dataTables.bootstrap.css" rel="stylesheet" />
     <link href="~/lib/DataTables/jquery.dataTables.min.css" rel="stylesheet" />
