--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/_ViewImports.cshtml
@@ -2,6 +2,9 @@
 @using NetCoreCMS.Framework.Core.Models
 @using NetCoreCMS.Core.Modules.Cms
 @using NetCoreCMS.Core.Modules.Cms.Models
+@using NetCoreCMS.Framework.Utility
+@using NetCoreCMS.Framework.Modules
+@using NetCoreCMS.Framework.Modules.Widgets
 @using NetCoreCMS.Core.Modules.Cms.Models.ManageViewModels
 @using NetCoreCMS.Core.Modules.Cms.Models.AccountViewModels
 @using NetCoreCMS.Modules.Cms.Models.ViewModels;
