--- a/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.HelloWorld/Views/_ViewImports.cshtml
@@ -1,2 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using NetCoreCMS.Framework.Utility
+@using NetCoreCMS.Framework.Modules
+@using NetCoreCMS.Framework.Modules.Widgets
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
