Layout Zone Widgets are saving into database.

--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -11,7 +11,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - NetCoreCMS Frontend</title>
-        
+    
+    <link href="~/css/ncc-common.css" rel="stylesheet" />
+    <script src="~/js/ncc-common.js" asp-append-version="true"></script>
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/Themes/Default/css/site.css" />
     <link href="~/lib/css-loader/dist/css-loader.css" rel="stylesheet" />
@@ -20,8 +23,7 @@
          
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/common.js" asp-append-version="true"></script>
+    
 
 </head>
 <body>
@@ -50,6 +52,11 @@
         </div>
     </nav>
     <div class="container body-content topMargin">
+        <div class="row">
+            <div id="globalMessageContainer" class="ncc-global-message">
+
+            </div>
+        </div>
         @RenderBody()
         <hr />
         <footer>
