--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsWidget/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsWidget/Index.cshtml
@@ -14,13 +14,39 @@
     }
 
     function drag(ev) {
-        ev.dataTransfer.setData("divId", ev.target.id);
+        ev.dataTransfer.setData("widgetId", ev.target.id);
     }
 
     function drop(ev) {
+
         ev.preventDefault();
-        var divId = ev.dataTransfer.getData("divId");
-        ev.target.appendChild(document.getElementById(divId));
+        var targetDiv = ev.target;
+        var divId = ev.dataTransfer.getData("widgetId");
+        targetDiv.appendChild(document.getElementById(divId));
+        var moduleId = $("#" + divId).attr("data-module-id");
+        var zone = $(targetDiv).attr("data-layout-zone");
+        var layout = $(targetDiv).attr("data-layout-name");
+        var theme = $(targetDiv).attr("data-theme-id");
+
+        $.ajax({
+            method: 'POST',
+            url: '/CmsWidget/SaveZoneWidget',
+            data: { module: moduleId, theme:theme, layout: layout, zone: zone, widget: divId },
+            success: function (rsp) {
+                console.log(rsp);
+                NccGlobalAlert.ShowSuccess(rsp.message);
+            },
+            error: function (rsp) {
+
+            }
+        });
+    }
+
+    function dropBack(ev) {
+        ev.preventDefault();
+        var targetDiv = ev.target;
+        var divId = ev.dataTransfer.getData("widgetId");
+        targetDiv.appendChild(document.getElementById(divId));        
     }
 </script>
 
@@ -40,9 +66,9 @@
                             <div class="col-lg-6">
                                 <div id="@item.ModuleId" class="panel panel-primary">
                                     <div class="panel-heading">@item.ModuleTitle</div>
-                                    <div class="panel-body"  ondrop="drop(event)" ondragover="allowDrop(event)">
+                                    <div class="panel-body"  ondrop="dropBack(event)" ondragover="allowDrop(event)">
                                         @foreach (IWidget widget in item.Widgets)
-                                        { 
+                                        {
                                             <div id="@widget.WidgetId" data-module-id="@item.ModuleId" class="panel panel-default" draggable="true" ondragstart="drag(event)" >
                                                 <div class="panel-heading">
                                                     <i class="glyphicon glyphicon-move margin-right-10"></i>&nbsp;@widget.Title
@@ -68,39 +94,47 @@
                 </div>
                 <div class="panel-body">
                     <ul class="nav nav-tabs">
+                        @{
+                            var active = "active";
+                            var ariaExpanded = "aria-expanded=\"true\"";
+                        }
                         @foreach (var layout in GlobalConfig.ActiveTheme.Layouts)
                         {
                             var tabName = "#tab_" + layout.Name.Replace(' ', '_');
-                            
-                            <li>
-                                <a href="@tabName" data-toggle="tab" > @layout.Name </a>
+
+                            <li class="@active">
+                                <a href="@tabName" data-toggle="tab" @ariaExpanded  > @layout.Name </a>
                             </li> 
+
+                            active = "";
+                            ariaExpanded = "";
                         }
                     </ul>
                     <div class="tab-content">
                         <br/>
+                        @{
+                            active = "active";
+                        }
                         @foreach (var layout in GlobalConfig.ActiveTheme.Layouts)
                         {
                             var tabName = "tab_" + layout.Name.Replace(' ','_');
-                            var active = "active";                            
+                                                      
                             <div class="tab-pane @active" id="@tabName">
                                 <div>Widget Sections for layout <strong>@layout.Name</strong> </div>
-                                @foreach (var zone in layout.WidgetSections)
+                                @foreach (var zone in layout.LayoutZones)
                                 {   
                                     <div class="panel panel-default">
                                         <div class="panel-heading">
                                             @zone
                                         </div>
-                                        <div class="panel-body" ondrop="drop(event)" ondragover="allowDrop(event)">
+                                        <div data-theme-id="@GlobalConfig.ActiveTheme.ThemeId"  data-layout-name="@layout.Name" data-layout-zone="@zone" class="panel-body" ondrop="drop(event)" ondragover="allowDrop(event)">
                                             Drop widget here
                                         </div>
                                     </div>
                                 }
-                            </div> 
-                            @if (!string.IsNullOrEmpty(active))
-                            {
-                                active = "";
-                            }
+                            </div>
+                                
+                            active = ""; 
                         } 
                     </div>
                 </div>
